--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,39 +1,30 @@
 - title: General Information
   type: map
   contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+    - name: Email
+      value: <a href="mailto:sundiang@uchicago.edu">sundiang@uchicago.edu
+    - name: GitHub
+      value: <a href="https://github.com/mjms/">/mjms
+    - name: LinkedIn
+      value: <a href="https://www.linkedin.com/in/marinasundiang/">/marinasundiang
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+    - title: PhD | Computational Neuroscience
+      institution: University Of Chicago, Chicago, IL, USA
+      year: 2023
+
+    - title: BS | Neural Science, Minors in Mathematics and Studio Art
+      institution: New York University, New York, NY, USA
+      year: 2014
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Scientist
+      institution: University Of Chicago, Chicago, IL, USA
+      year: 2016-2023
       description:
         - Description 1.
         - Description 2.
@@ -41,32 +32,17 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+
+    - title: Research Technician
+      institution: Columbia University Medical Center, New York, NY, USA
+      year: 2014-2016
       description:
         - Description 1.
         - Description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
+    - title: Undergraduate Research Assistant
+      institution: New York University, New York, NY, USA 
       year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
