--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 
 blog_name: second brain # blog_name will be displayed in your blog page
 blog_nav_title: second brain # your blog must have a title for it to be displayed in the nav bar
-blog_description: coming soon
+blog_description:
 permalink: /blog/:year/:title/
 
 # Pagination
